# semantic-shift

./: .gitignore  README.md  docker-compose.production.yml  docker-compose.staging.yml  package.json  pnpm-lock.yaml
.github/workflows/: deploy-production.yml  deploy-staging.yml
backend/: .dockerignore  .gitignore  Dockerfile.prod  main.py  package.json  pyproject.toml
backend/app/: __init__.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: data.py  sessions.py  terms.py  word2vec.py
backend/app/core/: config.py  context.py  dependencies.py  session.py
backend/app/models/: database.py  word2vec.py
frontend/: .dockerignore  Dockerfile.prod  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CosineSimilarityCharts.tsx  DashboardLayout.tsx  FileUpload.tsx  HomePage.tsx  SessionHeader.tsx  SessionTimer.tsx  Sidebar.tsx  TermsOfInterest.tsx  Word2VecTraining.tsx
frontend/src/components/ui/: Button.tsx  ButtonShowcase.tsx  Input.tsx  Select.tsx  index.ts
frontend/src/hooks/: useSession.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/src/utils/: errorHandling.ts
scripts/: dev.sh  restart.sh
