[project]
name = "app"
version = "0.1.0"
description = "FastAPI backend for diachronic data visualization"
authors = [
    {name = "KR", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9,<3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "fastapi-cors>=0.0.6",
    "pandas==2.1.4",
    "python-dotenv>=1.0.0",
    "cade==1.2.0",
    "numpy==1.26.4",
    "scipy==1.11.3",
    "scikit-learn==1.3.2",
    "smart-open==1.10.0",
    "httpx>=0.25.0",
    "setuptools>=68.0.0",
    "wheel>=0.40.0",
    "gensim @ git+https://github.com/vinid/gensim.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

